--- a/SlidingLayerSample/res/layout/activity_main.xml
+++ b/SlidingLayerSample/res/layout/activity_main.xml
@@ -22,63 +22,63 @@
 -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity" >
-    
-    <ImageView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="45dp"
-        android:contentDescription="@string/not_applicable"
-        android:src="@drawable/main_screen_rocket"/>
-    
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".MainActivity">
+
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="45dp"
+            android:contentDescription="@string/not_applicable"
+            android:src="@drawable/main_screen_rocket"/>
+
     <Button
-        android:id="@+id/buttonOpen"
-        style="@style/ButtonRed"
-        android:onClick="buttonClicked"
-        android:layout_centerInParent="true"
-        android:text="@string/open_button_container" />
+            android:id="@+id/buttonOpen"
+            style="@style/ButtonRed"
+            android:onClick="buttonClicked"
+            android:layout_centerInParent="true"
+            android:text="@string/open_button_container"/>
 
     <com.slidinglayer.SlidingLayer
-        xmlns:slidingLayer="http://schemas.android.com/apk/res/com.slidinglayersample"
-        android:id="@+id/slidingLayer1"
-        android:layout_width="@dimen/layer_width"
-        android:layout_height="match_parent">
-    <!--slidingLayer:shadowDrawable="@drawable/sidebar_shadow"
-        slidingLayer:shadowWidth="@dimen/shadow_width"
-        slidingLayer:offsetWidth="@dimen/offset_width"
-        slidingLayer:stickTo="auto|right|left|middle"
-        slidingLayer:closeOnTapEnabled="true">-->
+            android:id="@+id/slidingLayer1"
+            android:layout_width="@dimen/layer_size"
+            android:layout_height="match_parent">
+        <!--slidingLayer:shadowDrawable="@drawable/sidebar_shadow"
+        slidingLayer:shadowSize="@dimen/shadow_size"
+        slidingLayer:offsetDistance="@dimen/offset_distance"
+        slidingLayer:previewOffsetDistance="@dimen/preview_offset_distance"
+        slidingLayer:stickTo="top|bottom|right|left"
+        slidingLayer:changeStateOnTap="true">-->
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#14ad8f">
-                
-            <TextView 
-                android:id="@+id/swipeText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:fontFamily="sans-serif-medium"
-                android:drawablePadding="15dip"
-                android:paddingBottom="80dp"
-                android:textSize="17sp"
-                android:textColor="#074035"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#14ad8f">
+
+            <TextView
+                    android:id="@+id/swipeText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:fontFamily="sans-serif-medium"
+                    android:drawablePadding="15dip"
+                    android:paddingBottom="80dp"
+                    android:textSize="17sp"
+                    android:textColor="#074035"/>
 
             <Button
-		        android:id="@+id/buttonClose"
-		        style="@style/ButtonRed"
-		        android:onClick="buttonClicked"
-                android:layout_marginBottom="60dp"
-                android:layout_alignParentBottom="true"
-		        android:layout_centerHorizontal="true"
-		        android:text="@string/close_button_container" />
+                    android:id="@+id/buttonClose"
+                    style="@style/ButtonRed"
+                    android:onClick="buttonClicked"
+                    android:layout_marginBottom="60dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/close_button_container"/>
 
         </RelativeLayout>
 
