I want to be famous too!!

--- a/SlidingLayerSample/src/main/res/layout/activity_main.xml
+++ b/SlidingLayerSample/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
   ~ Copyright (C) 2013 6 Wunderkinder GmbH
   ~
   ~ Author: Jose L Ugia - @Jl_Ugia
+  ~ Author: Antonio Consuegra - @aconsuegra
   ~ Designer: Benedikt Lehnert - @blehnert
   ~ Designer: Timothy Achumba - @iam_timm
   ~ Version: 1.0
