--- a/SlidingLayerSample/src/main/res/layout/activity_main.xml
+++ b/SlidingLayerSample/src/main/res/layout/activity_main.xml
@@ -24,17 +24,13 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".MainActivity">
 
-    <android.support.v7.widget.Toolbar
+    <include
             android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            layout="@layout/toolbar"/>
 
     <ImageView
             android:layout_width="wrap_content"
